[project]
name = 'fediverse_analysis'
description = 'Analysis tools for the fediverse'
authors = [{name = 'Maximilian Ernst'}]
classifiers = [
	'Environment :: Console',
	'Intended Audience :: Science/Research',
	'Operating System :: OS Independent',
	'Programming Language :: Python :: 3 :: Only',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Topic :: Scientific/Engineering',
	'Topic :: Scientific/Engineering :: Information Analysis'
]
dependencies = [
	'click~=8.1',
	'elasticsearch~=8.11',
	'elastic-transport~=8.10',
	'elasticsearch_dsl~=8.11',
	'Mastodon.py~=1.8',
	'numpy~=1.26',
]
readme = 'README.md'
requires-python = '>=3.10'
dynamic = ["version"]

[project.optional-dependencies]
notebook = [
	'notebook~=7.0',
	'seaborn~=0.13',
]
